--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,18 @@
 
             </com.google.android.material.tabs.TabLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Adeyemi Oluwaseun"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:id="@+id/name"
+        app:layout_constraintTop_toBottomOf="@+id/tlayout"
+        />
+
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/vpager"
                 android:layout_width="0dp"
@@ -27,7 +39,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tlayout">
+                app:layout_constraintTop_toBottomOf="@id/name">
 
             </androidx.viewpager2.widget.ViewPager2>
     <androidx.coordinatorlayout.widget.CoordinatorLayout
