--- a/app/src/main/res/layout/experience_list.xml
+++ b/app/src/main/res/layout/experience_list.xml
@@ -15,12 +15,16 @@
     android:clickable="true">
 
     <RelativeLayout
-        android:layout_width="357dp"
-        android:layout_height="178dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="24dp">
+
+            >
 
             <TextView
                 android:id="@+id/companyName"
@@ -73,7 +77,7 @@
             <TextView
                 android:id="@+id/description"
                 android:layout_width="match_parent"
-                android:layout_height="72dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="6dp"
                 android:layout_marginEnd="6dp"
